# Gorky

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Gorky.cpp  Gorky.h  README.md  conanfile.txt
